<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewReceived"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Received Text Will Appear Here"
        android:textSize="18sp"
        android:padding="10dp"
        android:gravity="center"
        android:layout_marginBottom="16dp" />
</LinearLayout>
